Projeto_3/repository/Repository/ply/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    IGUAL
    RESERVE
    STRUCT

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaracao
Rule 2     programa -> declaracao programa
Rule 3     programa -> RCHAVE
Rule 4     programa -> LCHAVE
Rule 5     declaracao -> declaracaoVariavel
Rule 6     declaracao -> declaracaoFuncao
Rule 7     declaracao -> declaracaoEstrutura
Rule 8     declaracao -> comentario
Rule 9     declaracao -> estruturacontrole
Rule 10    declaracaoVariavel -> TIPO ID PONTOV
Rule 11    declaracaoVariavel -> TIPO ID EQUALS expressao PONTOV
Rule 12    declaracaoVariavel -> TIPO array PONTOV
Rule 13    declaracaoVariavel -> TIPO array EQUALS TEXTO PONTOV
Rule 14    declaracaoFuncao -> TIPO ID LPAREN parametros RPAREN bloco
Rule 15    parametros -> parametro
Rule 16    parametros -> parametro VIRGULA parametros
Rule 17    parametro -> TIPO ID
Rule 18    parametro -> TIPO ID LCOCHETES RCOCHETES
Rule 19    parametro -> TIPO RETIC ID
Rule 20    bloco -> LCHAVE declaracao RCHAVE
Rule 21    bloco -> LCHAVE
Rule 22    comentario -> COMENTARIO
Rule 23    expressao -> expressaoLogica
Rule 24    expressao -> atribuicao
Rule 25    expressao -> estruturacontrole
Rule 26    atribuicao -> ID EQUALS expressao
Rule 27    atribuicao -> ID MAISIGUAL expressao
Rule 28    atribuicao -> ID MENOSIGUAL expressao
Rule 29    atribuicao -> ID VEZESIGUAL expressao
Rule 30    atribuicao -> ID BARRAIGUAL expressao
Rule 31    atribuicao -> ID MODIGUAL expressao
Rule 32    atribuicao -> ID ANDIGUAL expressao
Rule 33    atribuicao -> ID ORIGUAL expressao
Rule 34    estruturacontrole -> IF LPAREN expressao RPAREN bloco
Rule 35    estruturacontrole -> IF LPAREN expressao RPAREN bloco ELSE bloco
Rule 36    estruturacontrole -> WHILE LPAREN expressao RPAREN bloco
Rule 37    estruturacontrole -> FOR LPAREN expressao PONTOV expressao PONTOV expressao RPAREN bloco
Rule 38    estruturacontrole -> SWITCH LPAREN expressao RPAREN caseLista
Rule 39    estruturacontrole -> BREAK PONTOV
Rule 40    estruturacontrole -> CONTINUE PONTOV
Rule 41    estruturacontrole -> RETURN expressao PONTOV
Rule 42    caseLista -> case_decl caseLista
Rule 43    caseLista -> <empty>
Rule 44    case_decl -> CASE expressao DOISPONTOS bloco
Rule 45    case_decl -> DEFAULT DOISPONTOS bloco
Rule 46    declaracaoEstrutura -> LCHAVE declaracaoVariavel RCHAVE PONTOV
Rule 47    array -> ID LCOCHETES expressao RCOCHETES
Rule 48    array -> ID LCOCHETES RCOCHETES
Rule 49    expressaoLogica -> expressaoRelacional
Rule 50    expressaoLogica -> expressaoLogica AND expressaoRelacional
Rule 51    expressaoLogica -> expressaoLogica OR expressaoRelacional
Rule 52    expressaoLogica -> EXCLAMACAO expressaoRelacional
Rule 53    expressaoLogica -> ID MAIOR ID
Rule 54    expressaoLogica -> ID MENOR ID
Rule 55    expressaoLogica -> ID MAIORIGUAL ID
Rule 56    expressaoLogica -> ID MENORIGUAL ID
Rule 57    expressaoLogica -> ID DIFERENTE ID
Rule 58    expressaoLogica -> ID IGUALIGUAL ID
Rule 59    expressaoRelacional -> expressaoAritmetica
Rule 60    expressaoRelacional -> expressaoAritmetica MAIOR expressaoAritmetica
Rule 61    expressaoRelacional -> expressaoAritmetica MENOR expressaoAritmetica
Rule 62    expressaoRelacional -> expressaoAritmetica MAIORIGUAL expressaoAritmetica
Rule 63    expressaoRelacional -> expressaoAritmetica MENORIGUAL expressaoAritmetica
Rule 64    expressaoRelacional -> expressaoAritmetica DIFERENTE expressaoAritmetica
Rule 65    expressaoRelacional -> expressaoAritmetica IGUALIGUAL expressaoAritmetica
Rule 66    expressaoAritmetica -> expressaoMultiplicativa
Rule 67    expressaoAritmetica -> expressaoMultiplicativa PLUS expressaoMultiplicativa
Rule 68    expressaoAritmetica -> expressaoMultiplicativa MINUS expressaoMultiplicativa
Rule 69    expressaoAritmetica -> <empty>
Rule 70    expressaoMultiplicativa -> expressaoMultiplicativa TIMES expressaoUnaria
Rule 71    expressaoMultiplicativa -> expressaoMultiplicativa DIVIDE expressaoUnaria
Rule 72    expressaoMultiplicativa -> expressaoMultiplicativa MOD expressaoUnaria
Rule 73    expressaoMultiplicativa -> expressaoUnaria
Rule 74    expressaoUnaria -> expressaoPostfix
Rule 75    expressaoUnaria -> MINUS expressaoPostfix
Rule 76    expressaoUnaria -> MAISMAIS expressaoPostfix PONTOV
Rule 77    expressaoUnaria -> MENOSMENOS expressaoPostfix PONTOV
Rule 78    expressaoPostfix -> primaria
Rule 79    expressaoPostfix -> primaria LCOCHETES expressao RCOCHETES
Rule 80    expressaoPostfix -> primaria LPAREN argumentos RPAREN
Rule 81    expressaoPostfix -> primaria PONTO ID
Rule 82    expressaoPostfix -> primaria SETA ID
Rule 83    argumentos -> <empty>
Rule 84    primaria -> ID
Rule 85    primaria -> NUM_INT
Rule 86    primaria -> NUM_DEC
Rule 87    primaria -> TEXTO
Rule 88    primaria -> LPAREN expressao RPAREN

Terminals, with rules where they appear

AND                  : 50
ANDIGUAL             : 32
BARRAIGUAL           : 30
BREAK                : 39
CASE                 : 44
COMENTARIO           : 22
CONTINUE             : 40
DEFAULT              : 45
DIFERENTE            : 57 64
DIVIDE               : 71
DOISPONTOS           : 44 45
ELSE                 : 35
EQUALS               : 11 13 26
EXCLAMACAO           : 52
FOR                  : 37
ID                   : 10 11 14 17 18 19 26 27 28 29 30 31 32 33 47 48 53 53 54 54 55 55 56 56 57 57 58 58 81 82 84
IF                   : 34 35
IGUAL                : 
IGUALIGUAL           : 58 65
LCHAVE               : 4 20 21 46
LCOCHETES            : 18 47 48 79
LPAREN               : 14 34 35 36 37 38 80 88
MAIOR                : 53 60
MAIORIGUAL           : 55 62
MAISIGUAL            : 27
MAISMAIS             : 76
MENOR                : 54 61
MENORIGUAL           : 56 63
MENOSIGUAL           : 28
MENOSMENOS           : 77
MINUS                : 68 75
MOD                  : 72
MODIGUAL             : 31
NUM_DEC              : 86
NUM_INT              : 85
OR                   : 51
ORIGUAL              : 33
PLUS                 : 67
PONTO                : 81
PONTOV               : 10 11 12 13 37 37 39 40 41 46 76 77
RCHAVE               : 3 20 46
RCOCHETES            : 18 47 48 79
RESERVE              : 
RETIC                : 19
RETURN               : 41
RPAREN               : 14 34 35 36 37 38 80 88
SETA                 : 82
STRUCT               : 
SWITCH               : 38
TEXTO                : 13 87
TIMES                : 70
TIPO                 : 10 11 12 13 14 17 18 19
VEZESIGUAL           : 29
VIRGULA              : 16
WHILE                : 36
error                : 

Nonterminals, with rules where they appear

argumentos           : 80
array                : 12 13
atribuicao           : 24
bloco                : 14 34 35 35 36 37 44 45
caseLista            : 38 42
case_decl            : 42
comentario           : 8
declaracao           : 1 2 20
declaracaoEstrutura  : 7
declaracaoFuncao     : 6
declaracaoVariavel   : 5 46
estruturacontrole    : 9 25
expressao            : 11 26 27 28 29 30 31 32 33 34 35 36 37 37 37 38 41 44 47 79 88
expressaoAritmetica  : 59 60 60 61 61 62 62 63 63 64 64 65 65
expressaoLogica      : 23 50 51
expressaoMultiplicativa : 66 67 67 68 68 70 71 72
expressaoPostfix     : 74 75 76 77
expressaoRelacional  : 49 50 51 52
expressaoUnaria      : 70 71 72 73
parametro            : 15 16
parametros           : 14 16
primaria             : 78 79 80 81 82
programa             : 2 0

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaracao
    (2) programa -> . declaracao programa
    (3) programa -> . RCHAVE
    (4) programa -> . LCHAVE
    (5) declaracao -> . declaracaoVariavel
    (6) declaracao -> . declaracaoFuncao
    (7) declaracao -> . declaracaoEstrutura
    (8) declaracao -> . comentario
    (9) declaracao -> . estruturacontrole
    (10) declaracaoVariavel -> . TIPO ID PONTOV
    (11) declaracaoVariavel -> . TIPO ID EQUALS expressao PONTOV
    (12) declaracaoVariavel -> . TIPO array PONTOV
    (13) declaracaoVariavel -> . TIPO array EQUALS TEXTO PONTOV
    (14) declaracaoFuncao -> . TIPO ID LPAREN parametros RPAREN bloco
    (46) declaracaoEstrutura -> . LCHAVE declaracaoVariavel RCHAVE PONTOV
    (22) comentario -> . COMENTARIO
    (34) estruturacontrole -> . IF LPAREN expressao RPAREN bloco
    (35) estruturacontrole -> . IF LPAREN expressao RPAREN bloco ELSE bloco
    (36) estruturacontrole -> . WHILE LPAREN expressao RPAREN bloco
    (37) estruturacontrole -> . FOR LPAREN expressao PONTOV expressao PONTOV expressao RPAREN bloco
    (38) estruturacontrole -> . SWITCH LPAREN expressao RPAREN caseLista
    (39) estruturacontrole -> . BREAK PONTOV
    (40) estruturacontrole -> . CONTINUE PONTOV
    (41) estruturacontrole -> . RETURN expressao PONTOV

    RCHAVE          shift and go to state 3
    LCHAVE          shift and go to state 4
    TIPO            shift and go to state 10
    COMENTARIO      shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    SWITCH          shift and go to state 15
    BREAK           shift and go to state 16
    CONTINUE        shift and go to state 17
    RETURN          shift and go to state 18

    programa                       shift and go to state 1
    declaracao                     shift and go to state 2
    declaracaoVariavel             shift and go to state 5
    declaracaoFuncao               shift and go to state 6
    declaracaoEstrutura            shift and go to state 7
    comentario                     shift and go to state 8
    estruturacontrole              shift and go to state 9

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaracao .
    (2) programa -> declaracao . programa
    (1) programa -> . declaracao
    (2) programa -> . declaracao programa
    (3) programa -> . RCHAVE
    (4) programa -> . LCHAVE
    (5) declaracao -> . declaracaoVariavel
    (6) declaracao -> . declaracaoFuncao
    (7) declaracao -> . declaracaoEstrutura
    (8) declaracao -> . comentario
    (9) declaracao -> . estruturacontrole
    (10) declaracaoVariavel -> . TIPO ID PONTOV
    (11) declaracaoVariavel -> . TIPO ID EQUALS expressao PONTOV
    (12) declaracaoVariavel -> . TIPO array PONTOV
    (13) declaracaoVariavel -> . TIPO array EQUALS TEXTO PONTOV
    (14) declaracaoFuncao -> . TIPO ID LPAREN parametros RPAREN bloco
    (46) declaracaoEstrutura -> . LCHAVE declaracaoVariavel RCHAVE PONTOV
    (22) comentario -> . COMENTARIO
    (34) estruturacontrole -> . IF LPAREN expressao RPAREN bloco
    (35) estruturacontrole -> . IF LPAREN expressao RPAREN bloco ELSE bloco
    (36) estruturacontrole -> . WHILE LPAREN expressao RPAREN bloco
    (37) estruturacontrole -> . FOR LPAREN expressao PONTOV expressao PONTOV expressao RPAREN bloco
    (38) estruturacontrole -> . SWITCH LPAREN expressao RPAREN caseLista
    (39) estruturacontrole -> . BREAK PONTOV
    (40) estruturacontrole -> . CONTINUE PONTOV
    (41) estruturacontrole -> . RETURN expressao PONTOV

    $end            reduce using rule 1 (programa -> declaracao .)
    RCHAVE          shift and go to state 3
    LCHAVE          shift and go to state 4
    TIPO            shift and go to state 10
    COMENTARIO      shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    SWITCH          shift and go to state 15
    BREAK           shift and go to state 16
    CONTINUE        shift and go to state 17
    RETURN          shift and go to state 18

    declaracao                     shift and go to state 2
    programa                       shift and go to state 19
    declaracaoVariavel             shift and go to state 5
    declaracaoFuncao               shift and go to state 6
    declaracaoEstrutura            shift and go to state 7
    comentario                     shift and go to state 8
    estruturacontrole              shift and go to state 9

state 3

    (3) programa -> RCHAVE .

    $end            reduce using rule 3 (programa -> RCHAVE .)


state 4

    (4) programa -> LCHAVE .
    (46) declaracaoEstrutura -> LCHAVE . declaracaoVariavel RCHAVE PONTOV
    (10) declaracaoVariavel -> . TIPO ID PONTOV
    (11) declaracaoVariavel -> . TIPO ID EQUALS expressao PONTOV
    (12) declaracaoVariavel -> . TIPO array PONTOV
    (13) declaracaoVariavel -> . TIPO array EQUALS TEXTO PONTOV

    $end            reduce using rule 4 (programa -> LCHAVE .)
    TIPO            shift and go to state 21

    declaracaoVariavel             shift and go to state 20

state 5

    (5) declaracao -> declaracaoVariavel .

    RCHAVE          reduce using rule 5 (declaracao -> declaracaoVariavel .)
    LCHAVE          reduce using rule 5 (declaracao -> declaracaoVariavel .)
    TIPO            reduce using rule 5 (declaracao -> declaracaoVariavel .)
    COMENTARIO      reduce using rule 5 (declaracao -> declaracaoVariavel .)
    IF              reduce using rule 5 (declaracao -> declaracaoVariavel .)
    WHILE           reduce using rule 5 (declaracao -> declaracaoVariavel .)
    FOR             reduce using rule 5 (declaracao -> declaracaoVariavel .)
    SWITCH          reduce using rule 5 (declaracao -> declaracaoVariavel .)
    BREAK           reduce using rule 5 (declaracao -> declaracaoVariavel .)
    CONTINUE        reduce using rule 5 (declaracao -> declaracaoVariavel .)
    RETURN          reduce using rule 5 (declaracao -> declaracaoVariavel .)
    $end            reduce using rule 5 (declaracao -> declaracaoVariavel .)


state 6

    (6) declaracao -> declaracaoFuncao .

    RCHAVE          reduce using rule 6 (declaracao -> declaracaoFuncao .)
    LCHAVE          reduce using rule 6 (declaracao -> declaracaoFuncao .)
    TIPO            reduce using rule 6 (declaracao -> declaracaoFuncao .)
    COMENTARIO      reduce using rule 6 (declaracao -> declaracaoFuncao .)
    IF              reduce using rule 6 (declaracao -> declaracaoFuncao .)
    WHILE           reduce using rule 6 (declaracao -> declaracaoFuncao .)
    FOR             reduce using rule 6 (declaracao -> declaracaoFuncao .)
    SWITCH          reduce using rule 6 (declaracao -> declaracaoFuncao .)
    BREAK           reduce using rule 6 (declaracao -> declaracaoFuncao .)
    CONTINUE        reduce using rule 6 (declaracao -> declaracaoFuncao .)
    RETURN          reduce using rule 6 (declaracao -> declaracaoFuncao .)
    $end            reduce using rule 6 (declaracao -> declaracaoFuncao .)


state 7

    (7) declaracao -> declaracaoEstrutura .

    RCHAVE          reduce using rule 7 (declaracao -> declaracaoEstrutura .)
    LCHAVE          reduce using rule 7 (declaracao -> declaracaoEstrutura .)
    TIPO            reduce using rule 7 (declaracao -> declaracaoEstrutura .)
    COMENTARIO      reduce using rule 7 (declaracao -> declaracaoEstrutura .)
    IF              reduce using rule 7 (declaracao -> declaracaoEstrutura .)
    WHILE           reduce using rule 7 (declaracao -> declaracaoEstrutura .)
    FOR             reduce using rule 7 (declaracao -> declaracaoEstrutura .)
    SWITCH          reduce using rule 7 (declaracao -> declaracaoEstrutura .)
    BREAK           reduce using rule 7 (declaracao -> declaracaoEstrutura .)
    CONTINUE        reduce using rule 7 (declaracao -> declaracaoEstrutura .)
    RETURN          reduce using rule 7 (declaracao -> declaracaoEstrutura .)
    $end            reduce using rule 7 (declaracao -> declaracaoEstrutura .)


state 8

    (8) declaracao -> comentario .

    RCHAVE          reduce using rule 8 (declaracao -> comentario .)
    LCHAVE          reduce using rule 8 (declaracao -> comentario .)
    TIPO            reduce using rule 8 (declaracao -> comentario .)
    COMENTARIO      reduce using rule 8 (declaracao -> comentario .)
    IF              reduce using rule 8 (declaracao -> comentario .)
    WHILE           reduce using rule 8 (declaracao -> comentario .)
    FOR             reduce using rule 8 (declaracao -> comentario .)
    SWITCH          reduce using rule 8 (declaracao -> comentario .)
    BREAK           reduce using rule 8 (declaracao -> comentario .)
    CONTINUE        reduce using rule 8 (declaracao -> comentario .)
    RETURN          reduce using rule 8 (declaracao -> comentario .)
    $end            reduce using rule 8 (declaracao -> comentario .)


state 9

    (9) declaracao -> estruturacontrole .

    RCHAVE          reduce using rule 9 (declaracao -> estruturacontrole .)
    LCHAVE          reduce using rule 9 (declaracao -> estruturacontrole .)
    TIPO            reduce using rule 9 (declaracao -> estruturacontrole .)
    COMENTARIO      reduce using rule 9 (declaracao -> estruturacontrole .)
    IF              reduce using rule 9 (declaracao -> estruturacontrole .)
    WHILE           reduce using rule 9 (declaracao -> estruturacontrole .)
    FOR             reduce using rule 9 (declaracao -> estruturacontrole .)
    SWITCH          reduce using rule 9 (declaracao -> estruturacontrole .)
    BREAK           reduce using rule 9 (declaracao -> estruturacontrole .)
    CONTINUE        reduce using rule 9 (declaracao -> estruturacontrole .)
    RETURN          reduce using rule 9 (declaracao -> estruturacontrole .)
    $end            reduce using rule 9 (declaracao -> estruturacontrole .)


state 10

    (10) declaracaoVariavel -> TIPO . ID PONTOV
    (11) declaracaoVariavel -> TIPO . ID EQUALS expressao PONTOV
    (12) declaracaoVariavel -> TIPO . array PONTOV
    (13) declaracaoVariavel -> TIPO . array EQUALS TEXTO PONTOV
    (14) declaracaoFuncao -> TIPO . ID LPAREN parametros RPAREN bloco
    (47) array -> . ID LCOCHETES expressao RCOCHETES
    (48) array -> . ID LCOCHETES RCOCHETES

    ID              shift and go to state 22

    array                          shift and go to state 23

state 11

    (22) comentario -> COMENTARIO .

    RCHAVE          reduce using rule 22 (comentario -> COMENTARIO .)
    LCHAVE          reduce using rule 22 (comentario -> COMENTARIO .)
    TIPO            reduce using rule 22 (comentario -> COMENTARIO .)
    COMENTARIO      reduce using rule 22 (comentario -> COMENTARIO .)
    IF              reduce using rule 22 (comentario -> COMENTARIO .)
    WHILE           reduce using rule 22 (comentario -> COMENTARIO .)
    FOR             reduce using rule 22 (comentario -> COMENTARIO .)
    SWITCH          reduce using rule 22 (comentario -> COMENTARIO .)
    BREAK           reduce using rule 22 (comentario -> COMENTARIO .)
    CONTINUE        reduce using rule 22 (comentario -> COMENTARIO .)
    RETURN          reduce using rule 22 (comentario -> COMENTARIO .)
    $end            reduce using rule 22 (comentario -> COMENTARIO .)


state 12

    (34) estruturacontrole -> IF . LPAREN expressao RPAREN bloco
    (35) estruturacontrole -> IF . LPAREN expressao RPAREN bloco ELSE bloco

    LPAREN          shift and go to state 24


state 13

    (36) estruturacontrole -> WHILE . LPAREN expressao RPAREN bloco

    LPAREN          shift and go to state 25


state 14

    (37) estruturacontrole -> FOR . LPAREN expressao PONTOV expressao PONTOV expressao RPAREN bloco

    LPAREN          shift and go to state 26


state 15

    (38) estruturacontrole -> SWITCH . LPAREN expressao RPAREN caseLista

    LPAREN          shift and go to state 27


state 16

    (39) estruturacontrole -> BREAK . PONTOV

    PONTOV          shift and go to state 28


state 17

    (40) estruturacontrole -> CONTINUE . PONTOV

    PONTOV          shift and go to state 29


state 18

    (41) estruturacontrole -> RETURN . expressao PONTOV
    (23) expressao -> . expressaoLogica
    (24) expressao -> . atribuicao
    (25) expressao -> . estruturacontrole
    (49) expressaoLogica -> . expressaoRelacional
    (50) expressaoLogica -> . expressaoLogica AND expressaoRelacional
    (51) expressaoLogica -> . expressaoLogica OR expressaoRelacional
    (52) expressaoLogica -> . EXCLAMACAO expressaoRelacional
    (53) expressaoLogica -> . ID MAIOR ID
    (54) expressaoLogica -> . ID MENOR ID
    (55) expressaoLogica -> . ID MAIORIGUAL ID
    (56) expressaoLogica -> . ID MENORIGUAL ID
    (57) expressaoLogica -> . ID DIFERENTE ID
    (58) expressaoLogica -> . ID IGUALIGUAL ID
    (26) atribuicao -> . ID EQUALS expressao
    (27) atribuicao -> . ID MAISIGUAL expressao
    (28) atribuicao -> . ID MENOSIGUAL expressao
    (29) atribuicao -> . ID VEZESIGUAL expressao
    (30) atribuicao -> . ID BARRAIGUAL expressao
    (31) atribuicao -> . ID MODIGUAL expressao
    (32) atribuicao -> . ID ANDIGUAL expressao
    (33) atribuicao -> . ID ORIGUAL expressao
    (34) estruturacontrole -> . IF LPAREN expressao RPAREN bloco
    (35) estruturacontrole -> . IF LPAREN expressao RPAREN bloco ELSE bloco
    (36) estruturacontrole -> . WHILE LPAREN expressao RPAREN bloco
    (37) estruturacontrole -> . FOR LPAREN expressao PONTOV expressao PONTOV expressao RPAREN bloco
    (38) estruturacontrole -> . SWITCH LPAREN expressao RPAREN caseLista
    (39) estruturacontrole -> . BREAK PONTOV
    (40) estruturacontrole -> . CONTINUE PONTOV
    (41) estruturacontrole -> . RETURN expressao PONTOV
    (59) expressaoRelacional -> . expressaoAritmetica
    (60) expressaoRelacional -> . expressaoAritmetica MAIOR expressaoAritmetica
    (61) expressaoRelacional -> . expressaoAritmetica MENOR expressaoAritmetica
    (62) expressaoRelacional -> . expressaoAritmetica MAIORIGUAL expressaoAritmetica
    (63) expressaoRelacional -> . expressaoAritmetica MENORIGUAL expressaoAritmetica
    (64) expressaoRelacional -> . expressaoAritmetica DIFERENTE expressaoAritmetica
    (65) expressaoRelacional -> . expressaoAritmetica IGUALIGUAL expressaoAritmetica
    (66) expressaoAritmetica -> . expressaoMultiplicativa
    (67) expressaoAritmetica -> . expressaoMultiplicativa PLUS expressaoMultiplicativa
    (68) expressaoAritmetica -> . expressaoMultiplicativa MINUS expressaoMultiplicativa
    (69) expressaoAritmetica -> .
    (70) expressaoMultiplicativa -> . expressaoMultiplicativa TIMES expressaoUnaria
    (71) expressaoMultiplicativa -> . expressaoMultiplicativa DIVIDE expressaoUnaria
    (72) expressaoMultiplicativa -> . expressaoMultiplicativa MOD expressaoUnaria
    (73) expressaoMultiplicativa -> . expressaoUnaria
    (74) expressaoUnaria -> . expressaoPostfix
    (75) expressaoUnaria -> . MINUS expressaoPostfix
    (76) expressaoUnaria -> . MAISMAIS expressaoPostfix PONTOV
    (77) expressaoUnaria -> . MENOSMENOS expressaoPostfix PONTOV
    (78) expressaoPostfix -> . primaria
    (79) expressaoPostfix -> . primaria LCOCHETES expressao RCOCHETES
    (80) expressaoPostfix -> . primaria LPAREN argumentos RPAREN
    (81) expressaoPostfix -> . primaria PONTO ID
    (82) expressaoPostfix -> . primaria SETA ID
    (84) primaria -> . ID
    (85) primaria -> . NUM_INT
    (86) primaria -> . NUM_DEC
    (87) primaria -> . TEXTO
    (88) primaria -> . LPAREN expressao RPAREN

    EXCLAMACAO      shift and go to state 35
    ID              shift and go to state 36
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    SWITCH          shift and go to state 15
    BREAK           shift and go to state 16
    CONTINUE        shift and go to state 17
    RETURN          shift and go to state 18
    MAIOR           reduce using rule 69 (expressaoAritmetica -> .)
    MENOR           reduce using rule 69 (expressaoAritmetica -> .)
    MAIORIGUAL      reduce using rule 69 (expressaoAritmetica -> .)
    MENORIGUAL      reduce using rule 69 (expressaoAritmetica -> .)
    DIFERENTE       reduce using rule 69 (expressaoAritmetica -> .)
    IGUALIGUAL      reduce using rule 69 (expressaoAritmetica -> .)
    AND             reduce using rule 69 (expressaoAritmetica -> .)
    OR              reduce using rule 69 (expressaoAritmetica -> .)
    PONTOV          reduce using rule 69 (expressaoAritmetica -> .)
    MINUS           shift and go to state 40
    MAISMAIS        shift and go to state 43
    MENOSMENOS      shift and go to state 44
    NUM_INT         shift and go to state 46
    NUM_DEC         shift and go to state 47
    TEXTO           shift and go to state 48
    LPAREN          shift and go to state 37

    expressao                      shift and go to state 30
    expressaoLogica                shift and go to state 31
    atribuicao                     shift and go to state 32
    estruturacontrole              shift and go to state 33
    expressaoRelacional            shift and go to state 34
    expressaoAritmetica            shift and go to state 38
    expressaoMultiplicativa        shift and go to state 39
    expressaoUnaria                shift and go to state 41
    expressaoPostfix               shift and go to state 42
    primaria                       shift and go to state 45

state 19

    (2) programa -> declaracao programa .

    $end            reduce using rule 2 (programa -> declaracao programa .)


state 20

    (46) declaracaoEstrutura -> LCHAVE declaracaoVariavel . RCHAVE PONTOV

    RCHAVE          shift and go to state 49


state 21

    (10) declaracaoVariavel -> TIPO . ID PONTOV
    (11) declaracaoVariavel -> TIPO . ID EQUALS expressao PONTOV
    (12) declaracaoVariavel -> TIPO . array PONTOV
    (13) declaracaoVariavel -> TIPO . array EQUALS TEXTO PONTOV
    (47) array -> . ID LCOCHETES expressao RCOCHETES
    (48) array -> . ID LCOCHETES RCOCHETES

    ID              shift and go to state 50

    array                          shift and go to state 23

state 22

    (10) declaracaoVariavel -> TIPO ID . PONTOV
    (11) declaracaoVariavel -> TIPO ID . EQUALS expressao PONTOV
    (14) declaracaoFuncao -> TIPO ID . LPAREN parametros RPAREN bloco
    (47) array -> ID . LCOCHETES expressao RCOCHETES
    (48) array -> ID . LCOCHETES RCOCHETES

    PONTOV          shift and go to state 51
    EQUALS          shift and go to state 52
    LPAREN          shift and go to state 53
    LCOCHETES       shift and go to state 54


state 23

    (12) declaracaoVariavel -> TIPO array . PONTOV
    (13) declaracaoVariavel -> TIPO array . EQUALS TEXTO PONTOV

    PONTOV          shift and go to state 55
    EQUALS          shift and go to state 56


state 24

    (34) estruturacontrole -> IF LPAREN . expressao RPAREN bloco
    (35) estruturacontrole -> IF LPAREN . expressao RPAREN bloco ELSE bloco
    (23) expressao -> . expressaoLogica
    (24) expressao -> . atribuicao
    (25) expressao -> . estruturacontrole
    (49) expressaoLogica -> . expressaoRelacional
    (50) expressaoLogica -> . expressaoLogica AND expressaoRelacional
    (51) expressaoLogica -> . expressaoLogica OR expressaoRelacional
    (52) expressaoLogica -> . EXCLAMACAO expressaoRelacional
    (53) expressaoLogica -> . ID MAIOR ID
    (54) expressaoLogica -> . ID MENOR ID
    (55) expressaoLogica -> . ID MAIORIGUAL ID
    (56) expressaoLogica -> . ID MENORIGUAL ID
    (57) expressaoLogica -> . ID DIFERENTE ID
    (58) expressaoLogica -> . ID IGUALIGUAL ID
    (26) atribuicao -> . ID EQUALS expressao
    (27) atribuicao -> . ID MAISIGUAL expressao
    (28) atribuicao -> . ID MENOSIGUAL expressao
    (29) atribuicao -> . ID VEZESIGUAL expressao
    (30) atribuicao -> . ID BARRAIGUAL expressao
    (31) atribuicao -> . ID MODIGUAL expressao
    (32) atribuicao -> . ID ANDIGUAL expressao
    (33) atribuicao -> . ID ORIGUAL expressao
    (34) estruturacontrole -> . IF LPAREN expressao RPAREN bloco
    (35) estruturacontrole -> . IF LPAREN expressao RPAREN bloco ELSE bloco
    (36) estruturacontrole -> . WHILE LPAREN expressao RPAREN bloco
    (37) estruturacontrole -> . FOR LPAREN expressao PONTOV expressao PONTOV expressao RPAREN bloco
    (38) estruturacontrole -> . SWITCH LPAREN expressao RPAREN caseLista
    (39) estruturacontrole -> . BREAK PONTOV
    (40) estruturacontrole -> . CONTINUE PONTOV
    (41) estruturacontrole -> . RETURN expressao PONTOV
    (59) expressaoRelacional -> . expressaoAritmetica
    (60) expressaoRelacional -> . expressaoAritmetica MAIOR expressaoAritmetica
    (61) expressaoRelacional -> . expressaoAritmetica MENOR expressaoAritmetica
    (62) expressaoRelacional -> . expressaoAritmetica MAIORIGUAL expressaoAritmetica
    (63) expressaoRelacional -> . expressaoAritmetica MENORIGUAL expressaoAritmetica
    (64) expressaoRelacional -> . expressaoAritmetica DIFERENTE expressaoAritmetica
    (65) expressaoRelacional -> . expressaoAritmetica IGUALIGUAL expressaoAritmetica
    (66) expressaoAritmetica -> . expressaoMultiplicativa
    (67) expressaoAritmetica -> . expressaoMultiplicativa PLUS expressaoMultiplicativa
    (68) expressaoAritmetica -> . expressaoMultiplicativa MINUS expressaoMultiplicativa
    (69) expressaoAritmetica -> .
    (70) expressaoMultiplicativa -> . expressaoMultiplicativa TIMES expressaoUnaria
    (71) expressaoMultiplicativa -> . expressaoMultiplicativa DIVIDE expressaoUnaria
    (72) expressaoMultiplicativa -> . expressaoMultiplicativa MOD expressaoUnaria
    (73) expressaoMultiplicativa -> . expressaoUnaria
    (74) expressaoUnaria -> . expressaoPostfix
    (75) expressaoUnaria -> . MINUS expressaoPostfix
    (76) expressaoUnaria -> . MAISMAIS expressaoPostfix PONTOV
    (77) expressaoUnaria -> . MENOSMENOS expressaoPostfix PONTOV
    (78) expressaoPostfix -> . primaria
    (79) expressaoPostfix -> . primaria LCOCHETES expressao RCOCHETES
    (80) expressaoPostfix -> . primaria LPAREN argumentos RPAREN
    (81) expressaoPostfix -> . primaria PONTO ID
    (82) expressaoPostfix -> . primaria SETA ID
    (84) primaria -> . ID
    (85) primaria -> . NUM_INT
    (86) primaria -> . NUM_DEC
    (87) primaria -> . TEXTO
    (88) primaria -> . LPAREN expressao RPAREN

    EXCLAMACAO      shift and go to state 35
    ID              shift and go to state 36
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    SWITCH          shift and go to state 15
    BREAK           shift and go to state 16
    CONTINUE        shift and go to state 17
    RETURN          shift and go to state 18
    MAIOR           reduce using rule 69 (expressaoAritmetica -> .)
    MENOR           reduce using rule 69 (expressaoAritmetica -> .)
    MAIORIGUAL      reduce using rule 69 (expressaoAritmetica -> .)
    MENORIGUAL      reduce using rule 69 (expressaoAritmetica -> .)
    DIFERENTE       reduce using rule 69 (expressaoAritmetica -> .)
    IGUALIGUAL      reduce using rule 69 (expressaoAritmetica -> .)
    AND             reduce using rule 69 (expressaoAritmetica -> .)
    OR              reduce using rule 69 (expressaoAritmetica -> .)
    RPAREN          reduce using rule 69 (expressaoAritmetica -> .)
    MINUS           shift and go to state 40
    MAISMAIS        shift and go to state 43
    MENOSMENOS      shift and go to state 44
    NUM_INT         shift and go to state 46
    NUM_DEC         shift and go to state 47
    TEXTO           shift and go to state 48
    LPAREN          shift and go to state 37
